Restruturaçao do mvc, implementa funcionalidade de login validaçao de login validaçao de registro

--- a/Backend/Bluvolt/src/main/resources/templates/index.html
+++ b/Backend/Bluvolt/src/main/resources/templates/index.html
@@ -43,19 +43,19 @@
                         <a class="nav-link active" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Serviços</a>
+                        <a class="nav-link" href="../static/services.html">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projetos</a>
+                        <a class="nav-link" href="../static/projects.html">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="../static/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQ</a>
+                        <a class="nav-link" href="../static/faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="contact.html">Contato</a>
+                        <a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="../static/contact.html">Contato</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -162,11 +162,11 @@
                     <h5>Links Rápidos</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-light">Início</a></li>
-                        <li><a href="services.html" class="text-light">Serviços</a></li>
-                        <li><a href="projects.html" class="text-light">Projetos</a></li>
-                        <li><a href="blog.html" class="text-light">Blog</a></li>
-                        <li><a href="faq.html" class="text-light">FAQ</a></li>
-                        <li><a href="contact.html" class="text-light">Contato</a></li>
+                        <li><a href="../static/services.html" class="text-light">Serviços</a></li>
+                        <li><a href="../static/projects.html" class="text-light">Projetos</a></li>
+                        <li><a href="../static/blog.html" class="text-light">Blog</a></li>
+                        <li><a href="../static/faq.html" class="text-light">FAQ</a></li>
+                        <li><a href="../static/contact.html" class="text-light">Contato</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
