--- a/Backend/Bluvolt/src/main/resources/templates/register.html
+++ b/Backend/Bluvolt/src/main/resources/templates/register.html
@@ -191,16 +191,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="../static/services.html">Serviços</a></li>
-                <li class="nav-item"><a class="nav-link" href="../static/projects.html">Projetos</a></li>
-                <li class="nav-item"><a class="nav-link" href="../static/blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="../static/faq.html">FAQ</a></li>
-                <li class="nav-item"><a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="../static/contact.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="/auth/inicio">Início</a></li>
+                <li class="nav-item"><a class="nav-link" href="/auth/services">Serviços</a></li>
+                <li class="nav-item"><a class="nav-link" href="/auth/projects">Projetos</a></li>
+                <li class="nav-item"><a class="nav-link" href="/auth/blog">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="/auth/faq">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="/auth/contact">Contato</a></li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link btn btn-sm btn-outline-light px-3" href="#">Entrar / Cadastrar</a>
+                    <a class="nav-link btn btn-sm btn-outline-light px-3" href="/auth/register">Entrar / Cadastrar</a>
                 </li>
             </ul>
         </div>
@@ -316,12 +316,12 @@
             <div class="col-md-4">
                 <h5>Links Rápidos</h5>
                 <ul class="list-unstyled">
-                    <li><a href="index.html" class="text-light">Início</a></li>
-                    <li><a href="../static/services.html" class="text-light">Serviços</a></li>
-                    <li><a href="../static/projects.html" class="text-light">Projetos</a></li>
-                    <li><a href="../static/blog.html" class="text-light">Blog</a></li>
-                    <li><a href="../static/faq.html" class="text-light">FAQ</a></li>
-                    <li><a href="../static/contact.html" class="text-light">Contato</a></li>
+                    <li><a href="/auth/inicio" class="text-light">Início</a></li>
+                    <li><a href="/auth/inicio" class="text-light">Serviços</a></li>
+                    <li><a href="/auth/inicio" class="text-light">Projetos</a></li>
+                    <li><a href="/auth/blog" class="text-light">Blog</a></li>
+                    <li><a href="/auth/faq" class="text-light">FAQ</a></li>
+                    <li><a href="/auth/contact" class="text-light">Contato</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
