--- a/Backend/Bluvolt/src/main/resources/templates/index.html
+++ b/Backend/Bluvolt/src/main/resources/templates/index.html
@@ -186,6 +186,6 @@
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/main.js"></script>
+    <script th:src="@{/js/main.js}"></script>
 </body>
 </html>
